Updated ini config and make file

--- a/tool/cachequery.ini
+++ b/tool/cachequery.ini
@@ -16,11 +16,11 @@ log_file =
 [System]
 # Requires sudo and 'msr' 'acpi-cpufreq' modules
 # Write into MSR 0x1a4 to disable HW prefetchers
-disable_prefetch = False
+disable_prefetch = True
 # Write into `/sys/devices/system/cpu/cpu*/online` to disable hyperthreading and multi-core
-disable_ht = False
+disable_ht = True
 # Write into MSR 0x1a0 to disable Intel's TurboBoost
-disable_turboboost = False
+disable_turboboost = True
 # Uses `cpupower frequency-set` to fix CPU's frequency (in MHz) 0 to avoid
 frequency_set = 0
 
